--- a/css/style.css
+++ b/css/style.css
@@ -6,19 +6,26 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
-* {
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
+}
+html {
+    /*by changing this font-size, we can change all the settings in the website*/
+    font-size: 62.5%; /*1rem = 10px, default font size is 16px(100%). but we want 10 px(62.5%) */
 }
 
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    /*font-size: 16px;*/
     line-height: 1.7;
     color: #777;
-    padding: 30px;
+    padding: 3rem;
+    box-sizing: border-box;
 }
 .header {
     height: 95vh;
@@ -32,15 +39,15 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     position: relative;
 }
-.logo-box{
+.header__logo-box{
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
-.logo{
-    height: 35px;
+.header__logo{
+    height: 3.5rem;
 }
-.text-box{
+.header__text-box{
     position: absolute;
     top: 40%; /*related to parent*/
     left: 50%; /*related to parent*/
@@ -51,12 +58,13 @@ body {
     color: #fff;
     text-transform: uppercase;
     backface-visibility: hidden; /*stops animation shaking. hides the background*/
+    margin-bottom: 6rem;
 }
-.heading-primary-main{
+.heading-primary--main{
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
     animation: moveInLeft 1s 0.5s ease-out; /*name,duration,animation delay,animation-timing-function*/
 
     /*
@@ -64,12 +72,12 @@ body {
 
     */
 }
-.heading-primary-sub{
+.heading-primary--sub{
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17.4px;
-    margin-bottom: 60px;
+    letter-spacing: 1.75rem;
+    /*margin-bottom: 60px;*/
     animation: moveInRight 1s 0.5s ease-out;
 }
 
@@ -77,10 +85,10 @@ body {
 @keyframes moveInLeft {
     0% {
         opacity: 0;
-        transform: translateX(-100px); /*starts 100px left*/
+        transform: translateX(-10rem); /*starts 100px left*/
     }
     80% {
-        transform: translateX(10px); /*moves 10 px right*/
+        transform: translateX(1rem); /*moves 10 px right*/
     }
     100% {
         opacity: 1;
@@ -91,10 +99,10 @@ body {
 @keyframes moveInRight {
     0% {
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
     80% {
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }
     100% {
         opacity: 1;
@@ -104,7 +112,7 @@ body {
 @keyframes moveInBottom {
     0% {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(3rem);
     }
     100% {
         opacity: 1;
@@ -116,21 +124,22 @@ body {
 .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 100px;
+    border-radius: 10rem;
     transition: all .2s; /*transition have to be in initial state*/
+    font-size: 1.6rem;
     position: relative; /*because of .btn::after is the child*/
 }
 .btn:hover {
     transform: translateY(-3px); /*moves up. y axis goes top to bottom thats why -*/
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /*x value, y value, blur, color with opacity*/
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); /*x value, y value, blur, color with opacity*/
 }
 .btn:active {
     transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
 }
-.btn-white {
+.btn--white {
     background-color: #fff;
     color: #777;
 }
@@ -139,21 +148,21 @@ body {
     display: inline-block; /*must have property*/
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1; /*behind the button*/
     transition: all .4s; /*parent class of .btn:hover::after*/
 }
-.btn-white::after {
+.btn--white::after {
     background-color: #fff;
 }
 .btn:hover::after{
     transform: scaleX(1.4) scaleY(1.6); /*scale increases the element*/
     opacity: 0;
 }
-.btn-animated {
+.btn--animated {
     animation: moveInBottom 0.5s ease-out .75s;
     animation-fill-mode: backwards;/*affects animation style before it starts*/
 }
