--- a/css/style.css
+++ b/css/style.css
@@ -1,168 +1,243 @@
-/*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
 html {
-    /*by changing this font-size, we can change all the settings in the website*/
-    font-size: 62.5%; /*1rem = 10px, default font size is 16px(100%). but we want 10 px(62.5%) */
-}
+  /*by changing this font-size, we can change all the settings in the website*/
+  font-size: 62.5%;
+  /*1rem = 10px, default font size is 16px(100%). but we want 10 px(62.5%) */ }
 
 body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    /*font-size: 16px;*/
-    line-height: 1.7;
-    color: #777;
-    padding: 3rem;
-    box-sizing: border-box;
-}
-.header {
-    height: 95vh;
-    background-image:  linear-gradient(
-        to right bottom,
-        rgba(126, 213, 111, 0.8),
-        rgb(40, 180, 131, 0.8)),
-        url(../img/hero.jpg);
-    background-size: cover;
-    background-position: top;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    position: relative;
-}
-.header__logo-box{
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-}
-.header__logo{
-    height: 3.5rem;
-}
-.header__text-box{
-    position: absolute;
-    top: 40%; /*related to parent*/
-    left: 50%; /*related to parent*/
-    transform: translate(-50%, -50%); /*does not depends on parent element. centers the text-box*/
-    text-align: center; /*alines button in middle */
-}
-.heading-primary{
-    color: #fff;
-    text-transform: uppercase;
-    backface-visibility: hidden; /*stops animation shaking. hides the background*/
-    margin-bottom: 6rem;
-}
-.heading-primary--main{
+  box-sizing: border-box; }
+
+/*@keyframe animation*/
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem);
+    /*starts 100px left*/ }
+  80% {
+    transform: translateX(1rem);
+    /*moves 10 px right*/ }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+    /*returns to original state*/ } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  /*font-size: 16px;*/
+  line-height: 1.7;
+  color: #777;
+  padding: 3rem; }
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  /*stops animation shaking. hides the background*/
+  margin-bottom: 6rem; }
+  .heading-primary--main {
     display: block;
     font-size: 6rem;
     font-weight: 400;
     letter-spacing: 3.5rem;
-    animation: moveInLeft 1s 0.5s ease-out; /*name,duration,animation delay,animation-timing-function*/
-
+    animation: moveInLeft 1s 0.5s ease-out;
+    /*name,duration,animation delay,animation-timing-function*/
     /*
-    animation-iteration-count: 3; // 3 times
+        animation-iteration-count: 3; // 3 times
 
-    */
-}
-.heading-primary--sub{
+        */ }
+  .heading-primary--sub {
     display: block;
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 1.75rem;
     /*margin-bottom: 60px;*/
-    animation: moveInRight 1s 0.5s ease-out;
-}
+    animation: moveInRight 1s 0.5s ease-out; }
 
-/*@keyframe animation*/
-@keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-10rem); /*starts 100px left*/
-    }
-    80% {
-        transform: translateX(1rem); /*moves 10 px right*/
-    }
-    100% {
-        opacity: 1;
-        transform: translate(0); /*returns to original state*/
-    }
-}
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
-@keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(10rem);
-    }
-    80% {
-        transform: translateX(-1rem);
-    }
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-@keyframes moveInBottom {
-    0% {
-        opacity: 0;
-        transform: translateY(3rem);
-    }
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 1.5rem; }
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem; }
+
 /*pseudo class(special state)*/
-.btn:link,
-.btn:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: all .2s; /*transition have to be in initial state*/
-    font-size: 1.6rem;
-    position: relative; /*because of .btn::after is the child*/
-}
+.btn:link, .btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all .2s;
+  /*transition have to be in initial state*/
+  font-size: 1.6rem;
+  position: relative;
+  /*because of &::after is the child*/ }
+
 .btn:hover {
-    transform: translateY(-3px); /*moves up. y axis goes top to bottom thats why -*/
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); /*x value, y value, blur, color with opacity*/
-}
+  transform: translateY(-3px);
+  /*moves up. y axis goes top to bottom thats why -*/
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  /*x value, y value, blur, color with opacity*/ }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    /*scale increases the element*/
+    opacity: 0; }
+
 .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
-}
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
 .btn--white {
-    background-color: #fff;
-    color: #777;
-}
+  background-color: #fff;
+  color: #777; }
+  .btn--white::after {
+    background-color: #fff; }
+
 .btn::after {
-    content: ""; /*must have property*/
-    display: inline-block; /*must have property*/
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1; /*behind the button*/
-    transition: all .4s; /*parent class of .btn:hover::after*/
-}
-.btn--white::after {
-    background-color: #fff;
-}
-.btn:hover::after{
-    transform: scaleX(1.4) scaleY(1.6); /*scale increases the element*/
-    opacity: 0;
-}
+  content: "";
+  /*must have property*/
+  display: inline-block;
+  /*must have property*/
+  height: 100%;
+  width: 100%;
+  border-radius: 10rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  /*behind the button*/
+  transition: all .4s;
+  /*parent class of &:hover::after*/ }
+
 .btn--animated {
-    animation: moveInBottom 0.5s ease-out .75s;
-    animation-fill-mode: backwards;/*affects animation style before it starts*/
-}
+  animation: moveInBottom 0.5s ease-out .75s;
+  animation-fill-mode: backwards;
+  /*affects animation style before it starts*/ }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  transition: all .2s; }
+
+.btn-text:hover {
+  background-color: #55c57a;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-0.2rem); }
+
+.btn-text:active {
+  box-shadow: 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
+
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem) / 3); }
+  .row .col-2-of-3 {
+    width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 6rem) / 4); }
+  .row .col-2-of-4 {
+    width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
+  .row .col-3-of-4 {
+    width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    /*related to parent*/
+    left: 50%;
+    /*related to parent*/
+    transform: translate(-50%, -50%);
+    /*does not depends on parent element. centers the text-box*/
+    text-align: center;
+    /*alines button in middle */ }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
