--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@
 
 @import "components/composition";
 @import "components/button";
-
+@import "components/feature-box";
 
 @import "layout/grid";
 @import "layout/header";
