--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,6 @@
 /*pseudo class(special state)*/
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -10,6 +11,10 @@
         transition: all .2s; /*transition have to be in initial state*/
         font-size: $default-font-size;
         position: relative; /*because of &::after is the child*/
+
+        // change for the button element
+        border: none;
+        cursor: pointer;
     }
 
     &:hover {
@@ -21,7 +26,9 @@
             opacity: 0;
         }
     }
-    &:active {
+    &:active,
+    &:focus {
+        outline: none;
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black, 0.2);
     }
